# Pixseal

./: .gitignore  CHANGELOG.md  README.md  README_KR.md  README_maintainer.md  build.sh  compile_extension.ps1  compile_extension.sh  requirements.txt  testRun.py
.github/workflows/: publish-test.yml  publish.yml
assets/CA/: pixseal-dev-root.crt  pixseal-dev-root.key
pip_package/: README.md  pyproject.toml
pip_package/Pixseal/: __init__.py  imageSigner.py  imageValidator.py  keyInput.py  simpleImage.py  simpleImage_ext.pyx  simpleImage_py.py
pip_package/Pixseal.egg-info/: PKG-INFO
