[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Pixseal"
version = "0.2.0"
description = "Encrypted Image Watermark Injector / Validator"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=41.0.0",
]

[tool.setuptools]
packages = ["Pixseal"]

[[tool.setuptools.ext-modules]]
name = "Pixseal.simpleImage_ext"
sources = ["Pixseal/simpleImage_ext.pyx"]
